--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prewatch": "rm -rf build/dist",
     "watch": "parcel watch src/index.html --cache-dir build/cache --out-dir build/dist",
     "prebuild": "rm -rf build/dist",
-    "build": "parcel build src/index.html --cache-dir build/cache --out-dir build/dist --no-source-maps"
+    "build": "parcel build src/index.html --cache-dir build/cache --out-dir build/dist --public-url ./ --no-source-maps"
   },
   "devDependencies": {
     "parcel-bundler": "^1.12.4",
