--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ node_js:
   - stable
 script:
   - npm run build
+before_deploy:
+  - echo "davidorlea.de" > build/dist/CNAME
 deploy:
   provider: pages
   skip_cleanup: true
