--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
   "author": "David Orlea",
   "license": "UNLICENSED",
   "private": true,
+  "source": "src/index.html",
+  "browserslist": "> 0.5%, last 2 versions, not dead",
   "scripts": {
     "clean": "rm -rf build",
     "prestart": "rm -rf build/dist",
-    "start": "parcel serve src/index.html --cache-dir build/cache --out-dir build/dist --open",
+    "start": "parcel serve --cache-dir build/cache --dist-dir build/dist --open",
     "prewatch": "rm -rf build/dist",
-    "watch": "parcel watch src/index.html --cache-dir build/cache --out-dir build/dist",
+    "watch": "parcel watch --cache-dir build/cache --dist-dir build/dist",
     "prebuild": "rm -rf build/dist",
-    "build": "parcel build src/index.html --cache-dir build/cache --out-dir build/dist --public-url ./ --no-source-maps"
+    "build": "parcel build --cache-dir build/cache --dist-dir build/dist --no-source-maps"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "sass": "^1.23.1"
+    "@parcel/transformer-sass": "^2.12.0",
+    "parcel": "^2.12.0"
   }
 }
